--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "body-parser": "*",
     "ejs": "^2.4.2",
     "morgan": "*",
-    "neo4j-driver": "^1.5.0"
-  },
-  "devDependencies": {
-    "chai": "^1.8",
-    "mocha": "^1.18",
-    "node-dev": "^2.0.1"
+    "mysql": "*",
+    "neo4j-driver": "^1.5.0",
+    "nodemon": "^1.17.5"
   }
 }
